--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "^3.3.0",
+    "axios": "^0.18.0",
     "vue": "^2.5.15",
     "vue-loader": "^14.2.1",
     "vue-template-compiler": "^2.5.15"
